# rave_effect

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: CircularBuffer.h  Components.h  EQ.h  FrequencyAnalyzer.h  Identifiers.h  Misc.h  ModelChooser.cpp  ModelChooser.h  MultiTypeFilter.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PostProcessor.h  RaveProcessor.cpp  RaveProcessor.h  WebViewInComponent.cpp  WebViewInComponent.h
source/frontend/: index.html  package-lock.json  package.json
source/frontend/public/: slider.riv  slideraugmented.riv  sliderswithbuttons.riv
source/frontend/src/: App.jsx  index.js  styles.css
